--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "galileozoe",
   "version": "0.1.0",
+  "proxy": "http://localhost:3000",
   "private": true,
-  "homepage": "https://galileozoe.github.io/software",
+  "homepage": "http://galileozoe.github.io/software",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -20,12 +21,12 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start --host 0.0.0.0",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
