--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,8 @@
     "jsx": "react-jsx",
      "types": ["jest"]
   },
-  "include": ["src"]
+  "include": [
+     "src",
+    "src/setupTests.ts",
+  ]
 }
